<resources>
    <string name="app_name">Birthday Hunt</string>
    <string name="welcome_image_desc">Birthday Image</string>
    <string name="welcome_title">Happy Birthday Dean! Ready to Play?</string>
    <string name="start_game">Lets Go!</string>
    <string name="title_activity_begin_game">begin_game</string>
    <string name="clues_pref_key">Clues</string>
    <string name="menu_questions_answered">Answered</string>
    <string name="menu_pol">Pols</string>
    <string name="menu_slap">Slaps</string>
    <string name="total_answered_info">this is total number of questions you answered out of all questions</string>
    <string name="pol_info">This is tha amount of pols you owe; 1 pol = 10 pushups</string>
    <string name="slaps_info">This is the total slaps you owe in our newly created slap bet</string>
    <string name="rules">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est ipsa laboriosam quasi sunt vel veritatis! Accusamus asperiores at, deserunt dolorem enim eum eveniet labore nihil omnis pariatur reprehenderit, sint tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi debitis ex fugit magni molestiae optio totam! Dolore ea harum id, illo incidunt itaque iure minus nihil nobis odit sapiente, ut?</string>
    <string name="pop_culture">Pop Culture</string>
    <string name="games">Games</string>
    <string name="quotes">Quotes</string>
    <string name="historical_figures">Historical Figures</string>
    <string name="inventions">Inventions</string>
    <string name="math">Math Problems</string>
    <string name="computers">Computer Science</string>
    <string name="geography">Geography</string>
    <string name="music">Songs and Music</string>
    <string name="sports">Sports</string>
    <string name="books">Classical Books</string>
    <string name="guys_faves">Guy\'s Favorites</string>
    <string name="wildlife">Wildlife</string>
    <string name="initial_question_1">$ SOUS Q.W.E.R.T.Y</string>
    <string name="pop_culture_clue">A box without hinges, key or lid. Yet golden treasure inside is hid</string>
    <string name="games_clue">Coal in my belly, Steel on my feet; When I get hot, it\'s time to eat</string>
    <string name="quotes_clue">I come in different sizes, but am always exactly 1 foot long</string>
    <string name="historical_figures_clue">Atari, PARC, NeXT, Pixar</string>
    <string name="inventions_clue">Seek the white plaque in thy dwelling</string>
    <string name="math_clue">Seven in a row to earn my wealth, but make me dirty and only half shall I pay</string>
    <string name="computers_clue">I have water put in me, but I am not a bath. I am often seen on Valentines day but I am not a box</string>
    <string name="geography_clue">I am the keeper of that which is rarely needed, I hold what you desire for future use</string>
    <string name="music_clue">Go back in time to the day you were born, there I lie next to many more</string>
    <string name="sports_clue">To keep your notes at eye level, simply stab we with the pin\'s navel</string>
    <string name="books_clue">Bright like diamond, hard like rock; You like me most when I am in a block</string>
    <string name="guys_faves_clue">Enter clue for poster</string>
    <string name="wildlife_clue">Enter clue for car</string>
    <string name="pop_culture_q1">The first film of what history-defining movie franchise was released in 1977?</string>
    <string name="pop_culture_q1_answer">Star Wars</string>
    <string name="pop_culture_q1_info">George Lucas accepted a lower salary in exchange for full merchandising rights. \n Most thought he was a fool - boy, were they wrong!</string>
    <string name="pop_culture_q2">What fictional character popularized the term "Friend-Zone"?</string>
    <string name="pop_culture_q2_answer">Joey Tribbiani</string>
    <string name="pop_culture_q2_info">Matt le Blanc only had 11 dollars to his name when he got the role of Joey!</string>
    <string name="pop_culture_q3">This story of this man made behemoth which never survived its maiden voyage was made into one of the best movies of all time</string>
    <string name="pop_culture_q3_answer">Titanic</string>
    <string name="pop_culture_q3_info">While there were many faults in the founding(when a ship sinks) of the R.M.S. Titanic (which took a few hours from the collision),
        even after the fact most of the life boats were carrying less than half of the amount of passengers able to fit in the boat,
        and they refused to turn around and help those floating in the ocean (eventually even most of these people died of hypothermia)</string>
    <string name="pop_culture_q4">This popular LOTR character dies in a different time and place in the movies compared to the books. \n (Hint: Sharkey)</string>
    <string name="pop_culture_q4_answer">Saruman</string>
    <string name="pop_culture_q4_info">In the books he dies much later in the reckoning of the shire.
        Aside from this there are many more fantastic additions in the books that didn\'t make it to the movies
        like many more songs, poems and the great Tom Bambadil (but I\'ll let you figure it out for yourself)</string>
    <string name="pop_culture_q5">This famous school divides its students into 4 unique houses by the command of a hat</string>
    <string name="pop_culture_q5_answer">Hogwarts</string>
    <string name="pop_culture_q5_info">All the movies combined total just shy of 20 hours (1,178 minutes) which makes it
        perfect for a full day 24-Hour marathon :)</string>
    <string name="pop_culture_q6">In {name of a great, mind-bending movie} what is the name of the objects used to determine if one is dreaming?</string>
    <string name="pop_culture_q6_answer">Totem</string>
    <string name="pop_culture_q6_info">Inception is my favorite movie of all time and I have watched it 6 times to this day!</string>
    <string name="pop_culture_q7">What animal is revealed to be running the world and causes the main characters of the TV show to flee to a new dimension?</string>
    <string name="pop_culture_q7_answer">Squirrel</string>
    <string name="pop_culture_q7_info">Justin Roiland actually gets drunk {Buuurp} in real life sometimes {Buurp} in order to voice Rick! {Buuurp}</string>
    <string name="pop_culture_q8">This cute, lovable, fictional character was created in 1974 and celebrates her birthday on November 1st</string>
    <string name="pop_culture_q8_answer">Hello Kitty</string>
    <string name="pop_culture_q8_info">The Hello Kitty franchise has generated an estimated 86 Billion dollars!!!
        but it is still only in 2nd place; can you guess what is first?</string>
    <string name="pop_culture_q9">The highest grossing movie in the most successful movie franchise of all time</string>
    <string name="pop_culture_q9_answer">Avengers: Endgame</string>
    <string name="pop_culture_q9_info">The MCU has grossed over 18 BILLION dollars to date with Endgame accounting for about 2.8 billion.</string>
    <string name="pop_culture_q10">What is the name of the character for which the actor won the only Best Supporting Actor oscar given posthumously(after his death)?</string>
    <string name="pop_culture_q10_answer">Joker</string>
    <string name="pop_culture_q10_info">Heath Ledger got into the role of Joker by locking himself in a secluded hotel room
        for 6 weeks while filling an eerie journal throughout his stay</string>
    <string name="games_q1">What is the very first pokemon to be designed?</string>
    <string name="games_q1_answer">Rhydon</string>
    <string name="games_q1_info">How many guesses did you make before looking it up? If less than 5 than I am dissappointed!</string>
    <string name="games_q2">What contest took place in the following cities: Cologne, Seattle, Vancouver, Shanghai?</string>
    <string name="games_q2_answer">The International</string>
    <string name="games_q2_info">TI9 had a prize pool of over 34 million dollars making it the highest esports prize (so far) by a landslide.</string>
    <string name="games_q3">What famous video game, created by Atari, was released in 1972?</string>
    <string name="games_q3_answer">Pong</string>
    <string name="games_q3_info">Contrary to what many might think, Pong is not the first video game made.
        That title belongs to Spacewars</string>
    <string name="games_q4">Sometimes I am used to play games, other times to build houses;
        often I am thrown with great accuracy and force at things, but the best is when I become the star of the show.
        What am I?</string>
    <string name="games_q4_answer">Playing Card</string>
    <string name="games_q4_info">Playing Cards were invented during the Tang Dynasty in China almost 1200! years ago.</string>
    <string name="games_q5">Who is the twin brother of the plumber who is tasked with rescuing a princess from a castle?</string>
    <string name="games_q5_answer">Luigi</string>
    <string name="games_q5_info">Mario was named after a landlord who interrupted a nintendo company meeting demanding overdue rent.</string>
    <string name="games_q6">What is the full name of the sidekick of most famous hedgehog in the world?</string>
    <string name="games_q6_answer">Miles Prower</string>
    <string name="games_q6_info">Miles Prower (or more commonly known as tails) is a pun on Miles Per Hour :) get it? - because Sonic is so fast</string>
    <string name="games_q7">This arcade game has both a male version and a female counterpart.</string>
    <string name="games_q7_answer">Pac-Man</string>
    <string name="games_q7_info">Originally the game was called Puck-Man! Can you imagine playing Puck-man.</string>
    <string name="games_q8">In this popular game released in 2007 the player has to teleport its character and objects in order to solve puzzles</string>
    <string name="games_q8_answer">Portal</string>
    <string name="games_q8_info">GLaDOS stands for Genetic Lifeform and Disk Operating System</string>
    <string name="games_q9">In which game do players have to try to score points by rolling 5 dice to create certain combanations?</string>
    <string name="games_q9_answer">Yahtzee</string>
    <string name="games_q9_info">Did you guess Generala?, in fact there are several games similar to Yahtzee including
        "poker dice" and "Jacy-Tacy"</string>
    <string name="games_q10">What game starts up after typing the following command: "emacs -batch -l dunnet" (*in an emacs editor)</string>
    <string name="games_q10_answer">Dunnet</string>
    <string name="games_q10_info">While this terrific adventure game can only be played on Mac and Linux,
        games such as sudoku, pac-man, 2048 and more! can be played on the windows command prompt</string>
    <string name="quotes_q1">"{blank}, Sweat and Respect. The first two you give, the last one you earn."</string>
    <string name="quotes_q1_answer">Blood</string>
    <string name="quotes_q1_info">Dwayne Johnson initially wanted to become a football player but after suffering injury he had to find a new path.
            He cites this in many of his speeches stating that he started with only 7 dollars after being kicked from the CFL(Canadian Football League).</string>
    <string name="quotes_q2">"Hatred is never ended by hatred but by {blank}."</string>
    <string name="quotes_q2_answer">Love</string>
    <string name="quotes_q2_info">Buddha. "The Buddha" was a wealthy prince that decided leave his comfortable life to endure suffering.
            when he wasn\'t fulfilled by suffering he decided to sit under a tree for months until he discovered a meaning for life.
            The rest is history.</string>
    <string name="quotes_q3">"A drop of {blank} catches more flies than a gallon of gall</string>
    <string name="quotes_q3_answer">Honey</string>
</resources>