<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:panelFullBackground="@color/main_app_darkish"
    android:background="@color/main_app_dark"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:title="@string/menu_questions_answered"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:id="@+id/questions_answered"/>
    <item
        android:title="@string/menu_pol"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:id="@+id/menu_pols"/>
    <item
        android:title="@string/menu_slap"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:id="@+id/menu_slaps"/>
    <item
        android:title=""
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:id="@+id/binary_digit_for_num"/>

</menu>